demoproject_2/src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>The subject of the discussion</description>
        <inlineHelpText>Enter the agenda of the session.</inlineHelpText>
        <label>Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <inlineHelpText>Choose the day for which the session will be alloted.</inlineHelpText>
        <label>Day</label>
        <referenceTo>Day__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <inlineHelpText>When the session would end.</inlineHelpText>
        <label>End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Min__c</fullName>
        <label>End Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quiz_Score__c</fullName>
        <inlineHelpText>Enter the Quiz Score.</inlineHelpText>
        <label>Quiz Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <displayFormat>S-{0000}</displayFormat>
        <inlineHelpText>ID of the session.</inlineHelpText>
        <label>Session_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <inlineHelpText>When the session will start.</inlineHelpText>
        <label>Start Hour</label>
        <picklist>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Min__c</fullName>
        <label>Start Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the trainer who will take the session.</inlineHelpText>
        <label>Trainer</label>
        <referenceTo>Trainer__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Day__c</columns>
        <columns>Trainer__c</columns>
        <columns>Start_Hour__c</columns>
        <columns>Start_Min__c</columns>
        <columns>End_Hour__c</columns>
        <columns>End_Min__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <recordTypes>
        <fullName>Break</fullName>
        <active>true</active>
        <description>Small Coffee Break</description>
        <label>Break</label>
    </recordTypes>
    <recordTypes>
        <fullName>Daily_Quiz</fullName>
        <active>true</active>
        <description>Schedule a daily quiz</description>
        <label>Daily Quiz</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lab</fullName>
        <active>true</active>
        <description>Schedule a practical Session</description>
        <label>Lab</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lunch</fullName>
        <active>true</active>
        <description>Lunch Break</description>
        <label>Lunch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session</fullName>
        <active>true</active>
        <description>Schedule a Theory Session</description>
        <label>TheorySession</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mentor_noSession</fullName>
        <active>false</active>
        <errorConditionFormula>NOT (Trainer__r.RecType__c = &quot;Mentor&quot;)</errorConditionFormula>
        <errorDisplayField>Trainer__c</errorDisplayField>
        <errorMessage>A mentor cannot be allocated a theory or lab session.</errorMessage>
    </validationRules>
</CustomObject>